--- a/hugo.toml
+++ b/hugo.toml
@@ -1,4 +1,4 @@
-baseURL = 'https://example.org/'
+baseURL = 'https://jockthan-mikado.github.io/hugo_project/'
 languageCode = 'en-us'
 title = 'My New Hugo Site'
 theme = 'ananke'
